third_party/move/move-compiler-v2/tests/checking-lang-v2.2/lambda/storable/closure_args.exp

Diagnostics:
error: captured value is missing abilities `copy`
    ┌─ tests/checking-lang-v2.2/lambda/storable/closure_args.move:148:30
    │
148 │                 |x| base_fun(a, x)
    │                              ^
    │
    = expected function type: `|u64|u64 has copy`

error: captured value is missing abilities `copy`
    ┌─ tests/checking-lang-v2.2/lambda/storable/closure_args.move:150:34
    │
150 │                 |x| base_fun2(x, a)
    │                                  ^
    │
    = expected function type: `|u64|u64 has copy`

error: captured value is missing abilities `copy`
    ┌─ tests/checking-lang-v2.2/lambda/storable/closure_args.move:156:31
    │
156 │                 |x| store_fun(a_store, x)
    │                               ^^^^^^^
    │
    = expected function type: `|u64|u64 has copy`

error: captured value is missing abilities `copy`
    ┌─ tests/checking-lang-v2.2/lambda/storable/closure_args.move:158:35
    │
158 │                 |x| store_fun2(x, a_store)
    │                                   ^^^^^^^
    │
    = expected function type: `|u64|u64 has copy`

error: captured value is missing abilities `store`
    ┌─ tests/checking-lang-v2.2/lambda/storable/closure_args.move:207:30
    │
207 │                 |x| base_fun(a, x)
    │                              ^
    │
    = expected function type: `|u64|u64 has store`

error: captured value is missing abilities `store`
    ┌─ tests/checking-lang-v2.2/lambda/storable/closure_args.move:209:34
    │
209 │                 |x| base_fun2(x, a)
    │                                  ^
    │
    = expected function type: `|u64|u64 has store`

error: captured value is missing abilities `store`
    ┌─ tests/checking-lang-v2.2/lambda/storable/closure_args.move:211:30
    │
211 │                 |x| copy_fun(a_copy, x)
    │                              ^^^^^^
    │
    = expected function type: `|u64|u64 has store`

error: captured value is missing abilities `store`
    ┌─ tests/checking-lang-v2.2/lambda/storable/closure_args.move:213:34
    │
213 │                 |x| copy_fun2(x, a_copy)
    │                                  ^^^^^^
    │
    = expected function type: `|u64|u64 has store`

error: function resulting from lambda lifting is missing the `store` ability
    ┌─ tests/checking-lang-v2.2/lambda/storable/closure_args.move:223:17
    │
223 │                 |x| x * 2
    │                 ^^^^^^^^^
    │
    = lambda cannot be reduced to partial application of existing function
    = expected function type: `|u64|u64 has store`

error: captured value is missing abilities `copy + store`
    ┌─ tests/checking-lang-v2.2/lambda/storable/closure_args.move:267:30
    │
267 │                 |x| base_fun(a, x)
    │                              ^
    │
    = expected function type: `|u64|u64 has copy + store`

error: captured value is missing abilities `copy + store`
    ┌─ tests/checking-lang-v2.2/lambda/storable/closure_args.move:269:34
    │
269 │                 |x| base_fun2(x, a)
    │                                  ^
    │
    = expected function type: `|u64|u64 has copy + store`

error: captured value is missing abilities `store`
    ┌─ tests/checking-lang-v2.2/lambda/storable/closure_args.move:271:30
    │
271 │                 |x| copy_fun(a_copy, x)
    │                              ^^^^^^
    │
    = expected function type: `|u64|u64 has copy + store`

error: captured value is missing abilities `store`
    ┌─ tests/checking-lang-v2.2/lambda/storable/closure_args.move:273:34
    │
273 │                 |x| copy_fun2(x, a_copy)
    │                                  ^^^^^^
    │
    = expected function type: `|u64|u64 has copy + store`

error: captured value is missing abilities `copy`
    ┌─ tests/checking-lang-v2.2/lambda/storable/closure_args.move:275:31
    │
275 │                 |x| store_fun(a_store, x)
    │                               ^^^^^^^
    │
    = expected function type: `|u64|u64 has copy + store`

error: captured value is missing abilities `copy`
    ┌─ tests/checking-lang-v2.2/lambda/storable/closure_args.move:277:35
    │
277 │                 |x| store_fun2(x, a_store)
    │                                   ^^^^^^^
    │
    = expected function type: `|u64|u64 has copy + store`

error: function resulting from lambda lifting is missing the `store` ability
    ┌─ tests/checking-lang-v2.2/lambda/storable/closure_args.move:283:17
    │
283 │                 |x| x * 2
    │                 ^^^^^^^^^
    │
    = lambda cannot be reduced to partial application of existing function
    = expected function type: `|u64|u64 has copy + store`
